[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epygram"
dynamic = ["version"]
description = "EPyGrAM : Enhanced Python for Graphics and Analysis of Meteorological fields"
authors = [
    { name = "Alexandre MARY", email = "alexandre.mary@meteo.fr" },
    { name = "Sébastien Riette"  , email = "sebastien.riette@meteo.fr"}
]
maintainers = [
  { name = "Alexandre MARY", email = "alexandre.mary@meteo.fr" }, 
  { name = "Sébastien Riette"  , email = "sebastien.riette@meteo.fr"}
]

readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["NWP", "meteorology", "GRIB", "FA"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: Unix',
]


requires-python = ">=3.6"
dependencies=[
        "footprints",
        "bronx",
        "numpy",
        "cartopy",   
        "matplotlib",
        "eccodes < 2.0.0",  # incompatibility btw the new eccodes-2.37.0 and FA, for now
        "netCDF4",
        "pyproj",      
        "six",
	"pyyaml" , # issue with bronx !!
        "ctypesForFortran < 2.0.0",  # temporary, until complete externalisation of arpifs4py
            ]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "epygram.__version__"}

[project.optional-dependencies]
docs = [
    "sphinx",
       ]
graphics = [
        "vtk",
        "contourpy",
        ]
features=[
  "taylorism",
  "pyresample",
  "scipy",
  "web.py"
    ]
format=[
  "h5py",
  "pillow >= 5.4.1"
  ]

vortex = [
  "vortex"
      ]
all = [
        "taylorism",  
        "footprints",
        "bronx",
        "numpy",
        "cartopy",   
        "matplotlib",
        "eccodes",      
        "vtk",   
        "vortex",  
        "pillow >= 5.4.1",  
        "contourpy",    
        "h5py",     
        "netCDF4",   
        "pyproj",      
        "pyresample",    
        "scipy", 
        "six",         
        "web.py"
         ]

[project.urls]
documentation = "https://umr-cnrm.github.io/EPyGrAM-doc"
source = "https://github.com/UMR-CNRM/EPyGrAM.git"
download = "https://github.com/UMR-CNRM/EPyGrAM/releases"
tracker = "https://github.com/UMR-CNRM/EPyGrAM/issues"

[tool.pytest.ini_options]
pythonpath = [
    "src",
             ]

testpaths = [
    "tests"
            ]
