[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epygram"
dynamic = ["version"]
description = "EPyGrAM : Enhanced Python for Graphics and Analysis of Meteorological fields"
authors = [
    { name = "Alexandre MARY", email = "alexandre.mary@meteo.fr" },
    { name = "Sébastien Riette"  , email = "sebastien.riette@meteo.fr"}
]
maintainers = [
  { name = "Alexandre MARY", email = "alexandre.mary@meteo.fr" },
  { name = "Sébastien Riette"  , email = "sebastien.riette@meteo.fr"}
]

readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["NWP", "meteorology", "GRIB", "FA"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: Unix',
]


requires-python = ">=3.10"
dependencies=[
        "footprints",
        "bronx",
        "numpy",
        "cartopy==0.23.0",  # versions older than 0.21.0 not compatible with python 3.10; more recent versions to be tested
        "matplotlib",
        "netCDF4",
        "pyproj",
        "pyyaml" ,  # issue with bronx !! soon fixed
	"ectrans4py",
        "falfilfa4py==1.0.0",  # consistent with eccodes 2.38.0
        "eccodes==2.38.0",
            ]

[project.scripts]
epy_cartoplot = "epygram.cli.cartoplot:main"
epy_ddhlfa_plot = "epygram.cli.ddhlfa_plot:main"
epy_domain_maker = "epygram.cli.domain_maker:main"
epy_what_the_grib = "epygram.cli.what_the_grib:main"
epygram = "epygram.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "epygram.__version__"}

[project.optional-dependencies]
docs = [
    "sphinx",
       ]
graphics = [
        "vtk",
        "contourpy",
        ]
features=[
  "taylorism",
  "pyresample",
  "scipy",
  "web.py"
    ]
extra_formats=[
  "h5py",
  "pillow >= 5.4.1"
  ]

vortex = [
  "vortex"
      ]
all = [
        "taylorism",
        "footprints",
        "bronx",
	"falfilfa4py",
        "numpy",
        "cartopy",
        "matplotlib",
        "eccodes",
        "vtk",
        "vortex",
        "pillow >= 5.4.1", 
        "contourpy",
        "h5py",
        "netCDF4",
        "pyproj",     
        "pyresample",
        "scipy",
        "six",       
        "web.py"
         ]

[project.urls]
documentation = "https://umr-cnrm.github.io/EPyGrAM-doc"
source = "https://github.com/UMR-CNRM/EPyGrAM.git"
download = "https://github.com/UMR-CNRM/EPyGrAM/releases"
tracker = "https://github.com/UMR-CNRM/EPyGrAM/issues"

[tool.pytest.ini_options]
pythonpath = [
    "src",
             ]

testpaths = [
    "tests"
            ]
