[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epygram"
dynamic = ["version"]
description = "EPyGrAM : Enhanced Python for Graphics and Analysis of Meteorological fields"
authors = [
    { name = "Alexandre MARY", email = "alexandre.mary@meteo.fr" },
    { name = "Sébastien Riette", email = "sebastien.riette@meteo.fr"}
           ]
maintainers = [
    { name = "Alexandre MARY", email = "alexandre.mary@meteo.fr" },
    { name = "Sébastien Riette", email = "sebastien.riette@meteo.fr"}
               ]
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["NWP", "meteorology", "GRIB", "FA"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: Unix',
               ]
requires-python = ">=3.10"
dependencies = [
    "bronx",
    "cartopy==0.23.0",  # versions older than 0.21.0 not compatible with python 3.10; more recent versions to be tested
    "eccodes==2.38.0",  # ! consistency with falfilfa4py !
    "ectrans4py",
    "falfilfa4py==1.0.3",  # ! consistency with eccodes !
    "footprints",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pyproj",
    "pytest",
    "pyyaml" ,  # to be removed when bronx dependency is fixed
                ]

[project.scripts]
epygram = "epygram.cli:main"
epy_cartoplot = "epygram.cli.cartoplot:main"
epy_convert = "epygram.cli.convert:main"
epy_ddhlfa_plot = "epygram.cli.ddhlfa_plot:main"
epy_delfield = "epygram.cli.delfield:main"
epy_domain_maker = "epygram.cli.domain_maker:main"
epy_fa_sp2gp = "epygram.cli.fa_sp2gp:main"
epy_histogram = "epygram.cli.histogram:main"
epy_movefield = "epygram.cli.movefield:main"
epy_plot3d = "epygram.cli.plot3d:main"
epy_point = "epygram.cli.point:main"
epy_profile = "epygram.cli.profile:main"
epy_run_epyweb = "epygram.cli.run_epyweb:main"
epy_section = "epygram.cli.section:main"
epy_spectrum = "epygram.cli.spectrum:main"
epy_stats = "epygram.cli.stats:main"
epy_what = "epygram.cli.what:main"
epy_what_the_grib = "epygram.cli.what_the_grib:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "epygram.__version__"}

[project.optional-dependencies]
docs = [
    "sphinx",
    "jupyter",  # for the gallery
    "nbsphinx",  # for the gallery
    "pyresample",  # used in the gallery
    "scipy",  # used in the gallery
        ]
graphics = [
    "vtk",
    "contourpy",
            ]
features = [
    "taylorism",
    "pyresample",
    "scipy",
    "web.py"
            ]
extra_formats = [
    "h5py",
    "pillow >= 5.4.1"
                 ]
vortex = [
    "vortex"
          ]
all = [
    "bronx",
    "cartopy",
    "contourpy",
    "eccodes",
    "falfilfa4py",
    "footprints",
    "h5py",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pillow >= 5.4.1", 
    "pyproj",     
    "pyresample",
    "scipy",
    "taylorism",
    "vtk",
    "vortex",
    "web.py",
       ]

[project.urls]
documentation = "https://umr-cnrm.github.io/EPyGrAM-doc"
source = "https://github.com/UMR-CNRM/EPyGrAM.git"
download = "https://github.com/UMR-CNRM/EPyGrAM/releases"
tracker = "https://github.com/UMR-CNRM/EPyGrAM/issues"

[tool.pytest.ini_options]
pythonpath = [
    "src",
              ]
testpaths = [
    "tests"
             ]
